Use new README template

--- a/README.adoc
+++ b/README.adoc
@@ -1,22 +1,42 @@
 = Maths
 Cyrille Chopelet <cyrille.chopelet@mines-nancy.org>
 
-// Set your repository informations here.
+
+
+// Github, Travis, Waffle/issues & license
 :github-user: cyChop
 :github-repo: maths-java
+:github-description: Math algorithms. Because algorithm programming is fun.
+:travis-built: true
+//:waffle: {github-repo}
+:license-name: MIT
+:license-url: http://opensource.org/licenses/MIT
+// Maven projects
 :pom-groupid: org.keyboardplaying
 :pom-artifactid: math-algorithms
-:license-name: MIT
-:license-shield: {license-name}
-:license-url: http://opensource.org/licenses/MIT
-
+// Sonar projects
+:sonar-groupid: {pom-groupid}
+:sonar-artifactid: {pom-artifactid}
 // The badges. Should not require any change.
 :url-shields: http://img.shields.io/
 :url-sonar: sonar.keyboardplaying.org
+// Travis
+ifeval::["{travis-built}" == "true"]
 image:{url-shields}travis/{github-user}/{github-repo}/master.svg[Build status, link="https://travis-ci.org/{github-user}/{github-repo}"]
-image:{url-shields}sonar/http/{url-sonar}/{pom-groupid}:{pom-artifactid}/coverage.svg[Test coverage, link="http://{url-sonar}/drilldown/measures/?id={pom-groupid}:{pom-artifactid}&metric=coverage"]
-image:{url-shields}sonar/http/{url-sonar}/{pom-groupid}:{pom-artifactid}/tech_debt.svg[Technical debt, link="http://{url-sonar}/dashboard/index?id={pom-groupid}:{pom-artifactid}"]
-image:{url-shields}github/issues-raw/{github-user}/{github-repo}.svg[Waffle, link="https://waffle.io/{github-user}/{github-repo}"]
+endif::[]
+// Sonar badges
+ifdef::sonar-groupid,sonar-artifactid[]
+image:{url-shields}sonar/http/{url-sonar}/{sonar-groupid}:{sonar-artifactid}/coverage.svg[Test coverage, link="http://{url-sonar}/drilldown/measures/?id={sonar-groupid}:{sonar-artifactid}&metric=coverage"]
+image:{url-shields}sonar/http/{url-sonar}/{sonar-groupid}:{sonar-artifactid}/tech_debt.svg[Technical debt, link="http://{url-sonar}/dashboard/index?id={sonar-groupid}:{sonar-artifactid}"]
+endif::sonar-groupid,sonar-artifactid[]
+// Issues
+ifdef::waffle[]
+image:{url-shields}github/issues-raw/{github-user}/{github-repo}.svg[Waffle, link="https://waffle.io/{github-user}/{waffle}"]
+endif::waffle[]
+ifndef::waffle[]
+image:{url-shields}github/issues-raw/{github-user}/{github-repo}.svg[Waffle, link="https://github.com/{github-user}/{github-repo}/issues"]
+endif::waffle[]
+// License
 image:{url-shields}github/license/{github-user}/{github-repo}.svg[License: {license-name}, link="{license-url}"]
 
 // Now, the main documentation.
